# pwt-domain/src/main/java/ac/obl/paywent/domain/AccountType.java
@@ -1,5 +1,5 @@
 package ac.obl.paywent.domain;
 
 public enum AccountType {
-	CHECKING, SAVINGS, CREDIT_CARD
+	CHECKING, SAVINGS, CREDIT
 }
