# pwt-web-api/src/main/resources/openapi.yaml
@@ -2,6 +2,7 @@ openapi: 3.0.3
 info:
   version: 1.0.0
   title: Paywent API
+  description: Payment went OK.
   contact:
     name: Igor Spasić
     url: 'https://igo.rs'
@@ -12,8 +13,19 @@ servers:
 tags:
   - name: profiles
     description: Profiles
+  - name: payments
+    description: Payments
+  - name: accounts
+    description: Accounts
 components:
   schemas:
+    AccountType:
+      type: string
+      enum:
+        - checking
+        - savings
+        - credit
+      title: AccountType
     NewProfileRequest:
       type: object
       properties:
@@ -39,11 +51,67 @@ components:
         - id
         - name
         - createdAt
+    AccountResponse:
+      title: AccountResponse
+      type: object
+      description: ''
+      properties:
+        id:
+          type: string
+        type:
+          $ref: '#/components/schemas/AccountType'
+        name:
+          type: string
+        number:
+          type: string
+      required:
+        - id
+        - name
+        - number
+    NewAccountRequest:
+      title: NewAccountRequest
+      type: object
+      properties:
+        name:
+          type: string
+        type:
+          $ref: '#/components/schemas/AccountType'
+        number:
+          type: string
+    PaymentAcceptedResponse:
+      title: PaymentAcceptedResponse
+      type: object
+      properties:
+        id:
+          type: string
+    PaymentResponse:
+      title: PaymentResponse
+      type: object
+      properties:
+        id:
+          type: string
+        status:
+          $ref: '#/components/schemas/PaymentStatus'
+        amount:
+          type: string
+        currency:
+          type: string
+        originator:
+          type: string
+        beneficiary:
+          type: string
+        sender:
+          type: string
+        receiver:
+          type: string
+    PaymentStatus:
+      title: PaymentStatus
+      type: string
 paths:
   /profiles:
     post:
       summary: Creates a new Profile.
-      operationId: postProfile
+      operationId: post-profiles
       tags:
         - profiles
       requestBody:
@@ -62,7 +130,7 @@ paths:
       description: Creates a new profile.
     get:
       summary: Returns a list of Profiles.
-      operationId: getProfiles
+      operationId: get-profiles
       responses:
         '200':
           description: A list of Profiles.
@@ -80,7 +148,7 @@ paths:
     get:
       summary: Gets a Profile by its ID.
       description: Returns a single Profile.
-      operationId: getProfileById
+      operationId: get-profile-id
       tags:
         - profiles
       parameters:
@@ -98,11 +166,9 @@ paths:
               schema:
                 $ref: '#/components/schemas/ProfileResponse'
               examples: {}
-        '404':
-          description: The Profile does not exists.
     delete:
       summary: Deletes a Profile by its given ID.
-      operationId: deleteProfileById
+      operationId: delete-profile-id
       tags:
         - profiles
       parameters:
@@ -116,3 +182,71 @@ paths:
         '204':
           description: Requested Profile is deleted and does not exist any more.
       description: Deletes a profile.
+  /accounts:
+    post:
+      summary: Creates a new account.
+      tags:
+        - accounts
+      operationId: post-accounts
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NewAccountRequest'
+      responses:
+        '201':
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AccountResponse'
+      description: Creates new account
+    get:
+      summary: List all accounts.
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/AccountResponse'
+      operationId: get-accounts
+      tags:
+        - accounts
+      description: Returns all accounts
+  /payments:
+    post:
+      summary: Initiate a payment.
+      operationId: post-payments
+      responses:
+        '202':
+          description: Accepted
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PaymentAcceptedResponse'
+      description: Initiate a payment.
+      tags:
+        - payments
+  '/payment/{id}':
+    parameters:
+      - schema:
+          type: string
+        name: id
+        in: path
+        required: true
+    get:
+      summary: Payment
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PaymentResponse'
+      operationId: get-payment-id
+      tags:
+        - payments
+      description: 'Returns '
